spacing issue with footer image

--- a/index1.css
+++ b/index1.css
@@ -306,6 +306,9 @@ footer {
     .footer-col {
         padding: 20px;
     }
+    .footer-contact a {
+        display: inline-flex;
+    }
 }
 
 
